# Pydata-visualizer

./: .gitignore  .readthedocs.yaml  DOCS_OVERVIEW.md  DOCUMENTATION.md  DOCUMENTATION_UPDATES.md  EXAMPLES.md  LICENSE  MANIFEST.in  README.md  USER_GUIDE.md  main.py  pyproject.toml  test_installs.py  test_outliers.html  test_outliers.py
DataAnalyser/: alerts.py  correlations.py  profiler.py  report.py  type_analyzers.py  visualizer.py
data_visualizer/: __init__.py  alerts.py  correlations.py  profiler.py  settings.py  type_analyzers.py  type_registry.py  visualizer.py
docs/: conf.py  index.rst  requirements.txt
docs/source/: DOCS_OVERVIEW.md  DOCUMENTATION.md  EXAMPLES.md  INSTALLATION.md  PYPI_DESCRIPTION.md  README.md  USER_GUIDE.md  conf.py  index.md  index.rst  overview.md
mylib/: profiler.py
