[project]
name = "data-visualizer"
version = "0.1.0"
authors = [
    {name="Aditya Deshmukh", email="adideshmukh@gmail.com"},
]

description = "A Python library for Exploratory Data Analysis and Profiling."
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "imagehash",
    "Jinja2",
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic",
    "scipy",
    "seaborn",
    "shapely",
    "visions[complete]",
    "tqdm",
    "colorama"
    
]

[project.urls]
"Homepage" = "https://github.com/Adi-Deshmukh/Data_Profiler"

